[package]
name = "gmsv_serverstat"
version = "0.1.2"
authors = ["William Venner <william@venner.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
libloading = "0.7"
lazy_static = "1.4"
sysinfo = { version = "0.19", default-features = false }

[profile.release]
lto = 'thin'
codegen-units = 1
