[package]
name = "gmsv_serverstat"
version = "0.2.0"
authors = ["William Venner <william@venner.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = 'thin'
codegen-units = 1

[dependencies]
libloading = "0.7"
lazy_static = "1.4"
sysinfo = { version = "0.19", default-features = false }
crossbeam = { version = "0.8", default-features = false, features = ["crossbeam-channel", "std"] }
